chore: 优化了一些样式

--- a/web/src/components/Markdown/src/common/style.less
+++ b/web/src/components/Markdown/src/common/style.less
@@ -4,6 +4,7 @@
 
 .markdown-container {
   .bytemd {
-    height: calc(100vh - 240px);
+    min-height: calc(100vh - 200px);
+    z-index: 100;
   }
 }
