--- a/web/src/components/Markdown/src/common/smart-blue.css
+++ b/web/src/components/Markdown/src/common/smart-blue.css
@@ -5,6 +5,7 @@
     background-image: linear-gradient(90deg, rgba(60, 10, 30, 0.04) 3%, rgba(0, 0, 0, 0) 3%), linear-gradient(360deg, rgba(60, 10, 30, 0.04) 3%, rgba(0, 0, 0, 0) 3%);
     background-size: 20px 20px;
     background-position: center center;
+    min-height: 100%;
 }
 
 /* 段落 */
